add data for swagger
